@@ -1,4 +1,6 @@
 current:
+  * factor image scanner cache and apply to QR
+    - fix image scanner handler called once per-image (vs every decode)
   * QZ and clustering fixes to QR integration
     - remove qr_finder QZ checks
     - decrease center clustering threshold from 1/3 to 1/5 of length
